# GarraRUST

./: .cspell.json  .dockerignore  .env.example  .garraignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SHA256SUMS  analyze_linear.ps1  attach_issues_to_project.ps1  cancel_gar213.ps1  check_cycle2.ps1  check_desktop_linear.ps1  clippy.toml  close_done_issues.ps1  close_gar159.ps1  close_gar201_206.ps1  close_gar204.ps1  close_gar205_212.ps1  close_gar211_210.ps1  close_gar214_215.ps1  create_blockers.ps1  create_bug_issue.ps1  create_bug_issue_v2.ps1  create_bug_issue_v3.ps1  create_bug_issue_v4.ps1  create_bug_issue_v5.ps1  create_bug_issue_v6.ps1  create_clippy_roadmap.ps1  (+51 more)
benches/database-poc/: Cargo.toml  README.md  results-postgres.json  results-sqlite.json  results.md
benches/database-poc/src/: main.rs  postgres_scenarios.rs  shared.rs  sqlite_scenarios.rs
crates/garraia-agents/: Cargo.toml
crates/garraia-agents/src/: agent_mode.rs  anthropic.rs  context_policy.rs  echo.rs  embeddings.rs  execution_budget.rs  lib.rs  llama_cpp.rs  memory_extractor.rs  modes.rs  multi_agent.rs  ollama.rs  openai.rs  orchestrator.rs  provider_resilience.rs  providers.rs  runtime.rs
crates/garraia-auth/: Cargo.toml  README.md  build.rs
crates/garraia-auth/src/: action.rs  app_pool.rs  audit.rs  audit_workspace.rs  can.rs  error.rs  extractor.rs  hashing.rs  internal.rs  jwt.rs  lib.rs  login_pool.rs  provider.rs  role.rs  sessions.rs  signup_pool.rs  storage_redacted.rs  types.rs
crates/garraia-auth/tests/: app_pool_role_guard.rs  common_cases_smoke.rs  concurrent_upgrade.rs  extractor.rs  harness_boot.rs  meta_tripwires.rs  raw_hatch_compile.rs  rls_matrix.rs  sessions_lifecycle.rs  signup_flow.rs  skeleton.rs  tenants_shape.rs  verify_internal.rs
crates/garraia-cli/: Cargo.toml
crates/garraia-cli/src/: banner.rs  chat.rs  config_cmd.rs  glob_cmd.rs  main.rs  migrate.rs  migrate_workspace.rs  update.rs  wizard.rs
crates/garraia-cli/tests/: migrate_workspace_integration.rs
crates/garraia-config/: Cargo.toml
crates/garraia-config/src/: auth.rs  check.rs  lib.rs  loader.rs  model.rs
crates/garraia-db/: Cargo.toml
crates/garraia-db/src/: chat_sync.rs  db_trait.rs  lib.rs  memory_store.rs  migrations.rs  postgres_db.rs  project_store.rs  session_store.rs  sqlite_db.rs  vector_store.rs
crates/garraia-db/tests/: project_store_test.rs
crates/garraia-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/garraia-gateway/: Cargo.toml
crates/garraia-gateway/assets/: api.js  app.js  dom.js  eventBus.js  i18n.js  modeSidebar.js  router.js  split_app.py  state.js  styles.css  theme.js  utils.js
crates/garraia-gateway/src/: a2a.rs  admin.html  agent_router.rs  api.rs  auth_metrics.rs  auth_routes.rs  auto_router.rs  billing.rs  bootstrap.rs  cluster.rs  commands.rs  context_summarizer.rs  externalization.rs  health.rs  lib.rs  logs_handler.rs  mcp_commands.rs  mcp_marketplace.rs  memory_handler.rs  metrics_auth.rs  metrics_exporter.rs  mobile_auth.rs  mobile_chat.rs  oauth.rs  observability.rs  openai_api.rs  openclaw_handler.rs  parrot_ws.rs  path_validation.rs  plugins_handler.rs  projects_handler.rs  rate_limiter.rs  router.rs  runtime_handler.rs  server.rs  session_auth.rs  skills_handler.rs  skins_handler.rs  slash_commands.rs  state.rs  (+6 more)
crates/garraia-gateway/tests/: audit_workspace_branch_two.rs  auth_test.rs  auth_v1_login.rs  authz_http_matrix.rs  gateway_integration.rs  harness_smoke.rs  metrics_auth_integration.rs  plugins_auth_ssrf.rs  projects_test.rs  rest_v1_audit.rs  rest_v1_chat_mgmt.rs  rest_v1_chats.rs  rest_v1_groups.rs  rest_v1_invites.rs  rest_v1_me.rs  rest_v1_me_authed.rs  rest_v1_memory.rs  rest_v1_memory_get_patch.rs  rest_v1_messages.rs  rest_v1_task_assignees.rs  rest_v1_task_labels.rs  rest_v1_task_subscriptions.rs  rest_v1_tasks.rs  rest_v1_uploads_delete_worker.rs  rest_v1_uploads_patch.rs  router_smoke_test.rs  skills_test.rs  skins_test.rs  telemetry_redaction_smoke.rs  voice_e2e_test.rs
crates/garraia-glob/: Cargo.toml
crates/garraia-glob/benches/: matching.rs
crates/garraia-glob/src/: debouncer.rs  ignore.rs  lib.rs  matcher.rs  path.rs  pattern.rs  scanner.rs  watcher.rs
crates/garraia-glob/tests/: vectors.rs
crates/garraia-media/: Cargo.toml
crates/garraia-media/src/: image_processor.rs  lib.rs  pdf.rs  processing.rs  types.rs
crates/garraia-plugins/: Cargo.toml
crates/garraia-plugins/src/: lib.rs  manifest.rs  runtime.rs  traits.rs
crates/garraia-runtime/: Cargo.toml
crates/garraia-runtime/src/: executor.rs  lib.rs  meta_controller.rs  mode.rs  state.rs
crates/garraia-security/: Cargo.toml
crates/garraia-security/src/: allowlist.rs  credentials.rs  lib.rs  validation.rs
crates/garraia-skills/: Cargo.toml
crates/garraia-skills/src/: installer.rs  parser.rs  scanner.rs
crates/garraia-storage/: Cargo.toml
crates/garraia-storage/src/: error.rs  hash_util.rs  integrity.rs  lib.rs  local_fs.rs  mime_allowlist.rs  object_store.rs  path_sanitize.rs  s3_compat.rs
crates/garraia-storage/tests/: s3_integration.rs
crates/garraia-telemetry/: Cargo.toml
crates/garraia-telemetry/src/: config.rs  layers.rs  lib.rs  metrics.rs  redact.rs  tracer.rs
crates/garraia-telemetry/tests/: idempotent_init.rs  idempotent_init_isolated.rs  smoke.rs
crates/garraia-tools/: Cargo.toml
crates/garraia-tools/src/: lib.rs
crates/garraia-voice/: Cargo.toml
crates/garraia-voice/src/: lib.rs  pipeline.rs
crates/garraia-workspace/: Cargo.toml  README.md
crates/garraia-workspace/migrations/: 001_initial_users_groups.sql  002_rbac_and_audit.sql  003_files_and_folders.sql  004_chats_and_messages.sql  005_memory_items_and_embeddings.sql  006_tasks_with_rls.sql  007_row_level_security.sql  008_login_role.sql  009_user_identities_hash_upgraded_at.sql  010_signup_role_and_session_select.sql  011_group_invites_pending_unique.sql  012_single_owner_idx_active_only.sql  (+3 more)
docs/: book.toml  (+19 more)
(+441 files in other folders)
