[workspace]
resolver = "2"
members = [
    "crates/garraia-desktop/src-tauri",
    "crates/garraia-cli",
    "crates/garraia-gateway",
    "crates/garraia-config",
    "crates/garraia-channels",
    "crates/garraia-agents",
    "crates/garraia-auth",
    "crates/garraia-db",
    "crates/garraia-plugins",
    "crates/garraia-media",
    "crates/garraia-security",
    "crates/garraia-telemetry",
    "crates/garraia-common",
    "crates/garraia-skills",
    "crates/garraia-tools",
    "crates/garraia-runtime",
    "crates/garraia-voice",
    "crates/garraia-workspace",
    "crates/garraia-glob",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/michelbr84/GarraRUST"
description = "A personal AI assistant platform, rewritten in Rust"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web / HTTP
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "multipart"], default-features = false }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Test isolation — plan 0016 M2-T5. Enables `#[serial_test::serial]`
# on tests that mutate process-global state (env vars, static caches).
serial_test = "3"

# Crypto / Security
ring = "0.17"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
jsonwebtoken = "9"

# Plugin system
wasmtime = "28"

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
poise = "0.6"
# Telegram
teloxide = { version = "0.17", default-features = false, features = ["rustls", "macros"] }
# Slack (Socket Mode)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# MCP (Model Context Protocol)
rmcp = { version = "0.16" }

# System / OS interop
libc = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenvy = "0.15"
url = "2"
regex = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
dashmap = "6"
notify = "7"

# Internal crates
garraia-common = { path = "crates/garraia-common" }
garraia-config = { path = "crates/garraia-config" }
garraia-gateway = { path = "crates/garraia-gateway" }
garraia-channels = { path = "crates/garraia-channels" }
garraia-agents = { path = "crates/garraia-agents" }
garraia-auth = { path = "crates/garraia-auth" }
garraia-db = { path = "crates/garraia-db" }
garraia-plugins = { path = "crates/garraia-plugins" }
garraia-media = { path = "crates/garraia-media" }
garraia-security = { path = "crates/garraia-security" }
garraia-skills = { path = "crates/garraia-skills" }
garraia-tools = { path = "crates/garraia-tools" }
garraia-runtime = { path = "crates/garraia-runtime" }
garraia-voice = { path = "crates/garraia-voice" }
garraia-glob = { path = "crates/garraia-glob" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
