[package]
name = "garraia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GarraIA CLI - Personal AI assistant platform"

[[bin]]
name = "garraia"
path = "src/main.rs"

[dependencies]
garraia-common = { workspace = true }
garraia-config = { workspace = true }
garraia-gateway = { workspace = true }
garraia-channels = { workspace = true }
garraia-agents = { workspace = true, features = ["mcp"] }
garraia-auth = { workspace = true }
garraia-db = { workspace = true }
garraia-plugins = { workspace = true, optional = true }
garraia-security = { workspace = true }
garraia-skills = { workspace = true }
garraia-glob = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dialoguer = "0.11"
serde_yaml = { workspace = true }
serde = { workspace = true }
dirs = "6"
uuid = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
tracing-appender = "0.2.4"
dotenvy.workspace = true

# Plan 0039 — `migrate workspace` deps.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
secrecy = "0.10"

[features]
default = ["telemetry"]
plugins = ["dep:garraia-plugins"]
telemetry = ["garraia-gateway/telemetry"]

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
# Integration tests run as their own bin crates, so they need explicit
# access to the workspace deps used from the test file.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
