[package]
name = "garraia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GarraIA CLI - Personal AI assistant platform"

[[bin]]
name = "garraia"
path = "src/main.rs"

[dependencies]
garraia-common = { workspace = true }
garraia-config = { workspace = true }
garraia-gateway = { workspace = true }
garraia-channels = { workspace = true }
garraia-agents = { workspace = true, features = ["mcp"] }
garraia-auth = { workspace = true }
garraia-db = { workspace = true }
garraia-plugins = { workspace = true, optional = true }
garraia-security = { workspace = true }
garraia-skills = { workspace = true }
garraia-glob = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dialoguer = "0.11"
serde_yaml = { workspace = true }
serde = { workspace = true }
dirs = "6"
uuid = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
tracing-appender = "0.2.4"
dotenvy.workspace = true

# Plan 0039 — `migrate workspace` deps.
# Use workspace-pinned versions where available to avoid drift.
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
rusqlite = { workspace = true }
base64 = "0.22"
secrecy = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["telemetry"]
plugins = ["dep:garraia-plugins"]
telemetry = ["garraia-gateway/telemetry"]
# Plan 0051 (GAR-444): forwards the echo LLM provider feature down the
# dependency chain (garraia-cli → garraia-gateway → garraia-agents).
# Enables `cargo build --bin garraia --features dev-echo-provider` in CI
# (see .github/workflows/ci.yml e2e job). Default OFF.
dev-echo-provider = ["garraia-gateway/dev-echo-provider"]

[dev-dependencies]
tempfile = "3"
testcontainers = "0.27"
# Integration tests run as their own bin crates, so they need explicit
# access to some deps from the test file. Reuse workspace pins.
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
