[package]
name = "garraia-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration loading and management for GarraIA"

[dependencies]
garraia-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
dirs = "6"
