[package]
name = "garraia-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage and vector search for GarraIA"

[dependencies]
garraia-common = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlite-vec = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
