[package]
name = "garraia-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway and control plane for GarraIA"

[dependencies]
garraia-common = { workspace = true }
garraia-config = { workspace = true }
garraia-glob = { workspace = true }
garraia-channels = { workspace = true, features = ["discord", "telegram", "slack", "whatsapp", "imessage", "openclaw"] }
garraia-agents = { workspace = true, features = ["mcp"] }
garraia-runtime = { workspace = true }
garraia-db = { workspace = true }
garraia-security = { workspace = true }
garraia-skills = { workspace = true }
garraia-voice = { workspace = true }
garraia-telemetry = { path = "../garraia-telemetry", optional = true }
# garraia-auth — wired into the gateway as default since GAR-391c.
# The auth router lives at `/v1/auth/*` and is mounted unconditionally.
# AppState carries Option<Arc<...>> fields that are None when AuthConfig
# env vars are missing (fail-soft mode).
garraia-auth = { workspace = true }
secrecy = "0.10"
# Auth metrics — same version pin as garraia-telemetry to share the global
# Prometheus exporter recorder. Behind cfg(feature = "telemetry") at the
# call sites in `auth_metrics.rs`.
metrics = "0.23"

# Telegram (for voice handler)
teloxide = { workspace = true }

tokio = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
# Fase 3.4 REST /v1 (plan 0015): OpenAPI generation + Swagger UI.
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
thiserror = { workspace = true }
dirs = "6"
governor = "0.8"
tower_governor = "0.8"
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
filetime = "0.2"
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

[features]
default = ["telemetry"]
mcp-http = ["garraia-agents/mcp-http"]
tls = ["dep:axum-server"]
telemetry = ["dep:garraia-telemetry"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-tungstenite = "0.26"
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing-test = "0.2"
tower = { workspace = true, features = ["util"] }
# GAR-391c integration tests for `/v1/auth/*` endpoints (login/refresh/logout/
# signup). The auth router is now wired into AppState by default (feature
# `auth-v1` removed in 391c). Tests boot a pgvector container, apply workspace
# migrations 001..010, and validate happy paths + byte-identical 401 anti-
# enumeration. Plan reference: plans/0012-gar-391c-extractor-and-wiring.md.
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
secrecy = "0.10"
garraia-workspace = { path = "../garraia-workspace" }
garraia-auth = { workspace = true }
anyhow = { workspace = true }
http-body-util = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
password-hash = "0.5"
argon2 = "0.5"
tracing-subscriber = { workspace = true }
