[package]
name = "garraia-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket gateway and control plane for GarraIA"

[dependencies]
garraia-common = { workspace = true }
garraia-config = { workspace = true }
garraia-glob = { workspace = true }
garraia-channels = { workspace = true, features = ["discord", "telegram", "slack", "whatsapp", "imessage", "openclaw"] }
garraia-agents = { workspace = true, features = ["mcp"] }
garraia-runtime = { workspace = true }
garraia-db = { workspace = true }
garraia-security = { workspace = true }
garraia-skills = { workspace = true }
garraia-voice = { workspace = true }
garraia-telemetry = { path = "../garraia-telemetry", optional = true }
# garraia-auth — wired into the gateway as default since GAR-391c.
# The auth router lives at `/v1/auth/*` and is mounted unconditionally.
# AppState carries Option<Arc<...>> fields that are None when AuthConfig
# env vars are missing (fail-soft mode).
garraia-auth = { workspace = true }
# Plan 0044 (GAR-395 slice 2): ObjectStore trait + LocalFs + S3 backends.
# Default features only — the tus PATCH commit path consumes the trait
# surface from `garraia-storage`. S3 backend is opt-in via the
# `storage-s3` feature on this crate (no-op transitive when absent).
garraia-storage = { path = "../garraia-storage" }
secrecy = "0.10"
# Auth metrics — same version pin as garraia-telemetry to share the global
# Prometheus exporter recorder. Behind cfg(feature = "telemetry") at the
# call sites in `auth_metrics.rs`.
metrics = "0.23"

# Telegram (for voice handler)
teloxide = { workspace = true }

tokio = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }
# Plan 0018: Argon2id hashing for invite tokens.
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
# Fase 3.4 REST /v1 (plan 0015): OpenAPI generation + Swagger UI.
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
thiserror = { workspace = true }
# Plan 0016 M4: real /v1/groups handlers operate on Postgres via
# `AppPool::pool_for_handlers`, which returns `&sqlx::PgPool`.
# The handlers need sqlx types (`query_as`, transactions) directly.
# Feature set mirrors dev-dependencies so prod + test link the
# same version.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dirs = "6"
governor = "0.8"
tower_governor = "0.8"
# Plan 0022 T2 (GAR-426): CIDR parsing for GARRAIA_TRUSTED_PROXIES env var.
# Used by `real_client_ip` helper to decide whether to honor `X-Forwarded-For`.
# Version pinned to match the transitive resolution already in Cargo.lock
# (introduced by other workspace crates).
ipnet = "2"
# Plan 0024 T2 (GAR-412): constant-time comparison for the metrics auth
# Bearer token. Same version as `garraia-auth` — transitively present in
# Cargo.lock but we declare it directly so the dep is tracked explicitly.
subtle = "2.6"
async-trait = { workspace = true }
anyhow = { workspace = true }
# Plan 0044: SHA-256 for audit `object_key_hash` (not for storage — the
# `garraia-storage` crate computes object checksums internally).
sha2 = "0.10"
hex = "0.4"
bytes = { workspace = true }
# Plan 0044: required only when compiling with the `storage-s3`
# feature so the bootstrap can build `aws_credential_types::Credentials`
# from static access/secret keys. Feature-gated to keep the baseline
# build lightweight.
aws-credential-types = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate"], default-features = false }
filetime = "0.2"
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

[features]
default = ["telemetry"]
mcp-http = ["garraia-agents/mcp-http"]
tls = ["dep:axum-server"]
telemetry = ["dep:garraia-telemetry"]
# Plan 0044 (GAR-395 slice 2): enables the S3Compatible ObjectStore
# backend in bootstrap. Off by default — `LocalFs` is the only backend
# wired in baseline builds to keep the aws-sdk dependency cost optional.
storage-s3 = ["garraia-storage/storage-s3", "dep:aws-credential-types"]
# Plan 0016 M2 — exposes test-only helpers on `GatewayServer` so the
# integration test harness (`tests/common/mod.rs`) can build a Router
# without running the full bootstrap pipeline. WARNING: MUST NOT be
# enabled by any production binary or non-test crate. Transitively
# enables the `test-support` feature of `garraia-auth` so the harness
# can call `JwtIssuer::new_for_test`.
test-helpers = ["garraia-auth/test-support"]

# Plan 0016 M2 review fix H-2 (code-reviewer): declare `harness_smoke`
# as requiring the `test-helpers` feature so running
# `cargo test -p garraia-gateway --test harness_smoke` without
# `--features test-helpers` produces a clear Cargo-level error instead
# of a confusing "unresolved import" error from rustc.
[[test]]
name = "harness_smoke"
path = "tests/harness_smoke.rs"
required-features = ["test-helpers"]

# Plan 0016 M3-T3: authed /v1/me integration tests. Same gating as
# harness_smoke — requires the test-helpers feature so
# `GatewayServer::build_router_for_test` is visible.
[[test]]
name = "rest_v1_me_authed"
path = "tests/rest_v1_me_authed.rs"
required-features = ["test-helpers"]

# Plan 0016 M4-T4: real /v1/groups handlers integration tests.
# Same gating as harness_smoke / rest_v1_me_authed.
[[test]]
name = "rest_v1_groups"
path = "tests/rest_v1_groups.rs"
required-features = ["test-helpers"]

# Plan 0014 — GAR-391d: app-layer cross-group authz matrix.
# 15 scenarios in one bundled `#[tokio::test]`. Same gating as the
# other integration binaries so running `cargo test -p garraia-gateway`
# without `--features test-helpers` yields a clean Cargo-level error
# rather than a confusing "unresolved import".
[[test]]
name = "authz_http_matrix"
path = "tests/authz_http_matrix.rs"
required-features = ["test-helpers"]

# Plan 0019 — GAR-393 slice 3: POST /v1/invites/{token}/accept.
# 6 scenarios in one bundled `#[tokio::test]`. Path shape was adjusted
# from `:accept` to `/accept` due to Axum 0.8 / matchit limitation
# (one parameter per segment). Same feature gating as other suites.
[[test]]
name = "rest_v1_invites"
path = "tests/rest_v1_invites.rs"
required-features = ["test-helpers"]

# Plan 0022 T7 — F-05 regression guard for audit_events_group_or_self
# policy branch 2. Uses the same harness as other integration tests
# and needs the same feature gate so CI's default `cargo test`
# (without --features test-helpers) skips it instead of failing to
# compile `JwtIssuer::new_for_test` / `build_router_for_test`.
[[test]]
name = "audit_workspace_branch_two"
path = "tests/audit_workspace_branch_two.rs"
required-features = ["test-helpers"]

# Plan 0024 T6 (GAR-412): dedicated /metrics listener integration.
# Six scenarios bound to real TcpListeners — exercises the Axum
# router + middleware + fail-closed startup check end-to-end. Does
# not rely on the testcontainer harness, so strictly the feature
# gate isn't required for compilation, but we keep it aligned with
# the other integration binaries so plain `cargo test -p garraia-gateway`
# continues to skip network-binding tests by default.
[[test]]
name = "metrics_auth_integration"
path = "tests/metrics_auth_integration.rs"
required-features = ["test-helpers"]

# Plan 0044 — GAR-395 slice 2: tus PATCH + OPTIONS integration.
# Bundled scenarios. Feature-gated like the other integration tests
# and guards Docker availability at runtime so CI without Docker
# skips gracefully.
[[test]]
name = "rest_v1_uploads_patch"
path = "tests/rest_v1_uploads_patch.rs"
required-features = ["test-helpers"]

# Plan 0047 — GAR-395 slice 3 commit 4: DELETE termination + expiration
# worker tick + streaming `put_stream` via finalize integration tests.
# Single bundled `#[tokio::test]` following the same feature gate as the
# rest of the integration suite so plain `cargo test -p garraia-gateway`
# (without --features test-helpers) skips compilation cleanly.
[[test]]
name = "rest_v1_uploads_delete_worker"
path = "tests/rest_v1_uploads_delete_worker.rs"
required-features = ["test-helpers"]

[dev-dependencies]
# Plan 0024 T4 (GAR-412): metrics_exporter tests and the
# metrics_auth_integration binary build a `PrometheusRecorder` directly
# (via `PrometheusBuilder::build_recorder`) to obtain a handle without
# installing the global recorder. Kept in sync with the version pin in
# `garraia-telemetry`.
metrics-exporter-prometheus = "0.15"
tempfile = "3"
serial_test = { workspace = true }
wiremock = "0.6"
# Plan 0016 M4 review fix: the sqlx dep was previously listed in
# BOTH [dependencies] and [dev-dependencies] with identical feature
# sets. Cargo deduplicates when features match, so there is no
# linkage conflict, but the dev-dependencies entry is now redundant
# because production code imports sqlx directly (via `groups.rs`
# handlers). The prod entry above carries the canonical feature set;
# tests inherit it transitively. Removed the dev-dependencies line.
tokio-tungstenite = "0.26"
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing-test = "0.2"
tower = { workspace = true, features = ["util"] }
# GAR-391c integration tests for `/v1/auth/*` endpoints (login/refresh/logout/
# signup). The auth router is now wired into AppState by default (feature
# `auth-v1` removed in 391c). Tests boot a pgvector container, apply workspace
# migrations 001..010, and validate happy paths + byte-identical 401 anti-
# enumeration. Plan reference: plans/0012-gar-391c-extractor-and-wiring.md.
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
secrecy = "0.10"
garraia-workspace = { path = "../garraia-workspace" }
garraia-auth = { workspace = true }
anyhow = { workspace = true }
http-body-util = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
